Add missing linebreak

--- a/locale/nl/LC_MESSAGES/meerk40t.po
+++ b/locale/nl/LC_MESSAGES/meerk40t.po
@@ -1408,7 +1408,7 @@ msgstr ""
 #: meerk40t/core/planner.py:194
 msgid ""
 "Try to complete a set of inner burns and the associated outer cut before "
-"moving onto other elements.This option only does something if Burn Inner "
+"moving onto other elements.\nThis option only does something if Burn Inner "
 "First is also selected. If your design has multiple separate pieces on "
 "it, this should mostly cause each piece to be burned in entirety before "
 "moving on to burn another piece. This can reduce the risk of e.g. a shift"
