--- a/locale/de/LC_MESSAGES/meerk40t.po
+++ b/locale/de/LC_MESSAGES/meerk40t.po
@@ -17619,3 +17619,31 @@ msgstr "Starte die im Gerät gespeicherte Datei"
 #: ./meerk40t\newly\gui\newlyconfig.py:20
 msgid "Newly-Configuration"
 msgstr "Newly-Einstellungen"
+
+#: ./meerk40t\core\planner.py:53
+msgid "Cluster raster objects"
+msgstr "Trenne Raster-Objekte"
+
+#: ./meerk40t\core\planner.py:58
+msgid ""
+"Separate non-overlapping raster objects.\n"
+"Active: this will raster close (ie overlapping) objects as one,\n"
+"but will separately process objects lying apart from each other.\n"
+"Inactive: all objects will be lasered as one single unit."
+msgstr ""
+"Trenne sich nicht überlagernde Objekte innerhalb eines Raster-Arbeitsvorgangs.\n"
+"Aktiv: beieinander liegende (=sich überlagernde) Objekte werden\n"
+"als ein Element gelasert, entfent liegende Objekte werden separat gelasert.\n"
+"Inaktiv: alle Objekte werden zusammen in einem einzigen Vorgang gelasert."
+
+#: ./meerk40t\core\planner.py:68
+msgid "Margin:"
+msgstr "Abstand:"
+
+#: ./meerk40t\core\planner.py:71
+msgid "Allowed gap between rasterable objects, to still be counted as one."
+msgstr "Minndest-Abstand zwischen zu rasternden Objekten, damit sie getrennt werden."
+
+#: ./meerk40t\core\planner.py:633
+msgid "Converting data"
+msgstr "Wandle Daten um"
