--- a/locale/fr/LC_MESSAGES/meerk40t.po
+++ b/locale/fr/LC_MESSAGES/meerk40t.po
@@ -12650,7 +12650,7 @@ msgstr ""
 #: meerk40t/grbl/gui/tcpcontroller.py:70
 #: meerk40t/lihuiyu/gui/lhydrivergui.py:228
 #: meerk40t/lihuiyu/gui/tcpcontroller.py:73
-msgid "IP/Host if the server computer"
+msgid "IP/hostname of the server computer"
 msgstr ""
 
 #: meerk40t/grbl/gui/tcpcontroller.py:71
