--- a/locale/pt_PT/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_PT/LC_MESSAGES/meerk40t.po
@@ -12772,7 +12772,7 @@ msgstr "Estado da ligação"
 #: meerk40t/grbl/gui/tcpcontroller.py:70
 #: meerk40t/lihuiyu/gui/lhydrivergui.py:228
 #: meerk40t/lihuiyu/gui/tcpcontroller.py:73
-msgid "IP/Host if the server computer"
+msgid "IP/hostname of the server computer"
 msgstr "IP/Hospedeiro se o computador servidor"
 
 #: meerk40t/grbl/gui/tcpcontroller.py:71
