--- a/locale/zh/LC_MESSAGES/meerk40t.po
+++ b/locale/zh/LC_MESSAGES/meerk40t.po
@@ -12612,7 +12612,7 @@ msgstr "连接状态"
 
 #: meerk40t/grbl/gui/tcpcontroller.py:70 meerk40t/lihuiyu/gui/lhydrivergui.py:228
 #: meerk40t/lihuiyu/gui/tcpcontroller.py:73
-msgid "IP/Host if the server computer"
+msgid "IP/hostname of the server computer"
 msgstr "服务器计算机的 IP/主机"
 
 #: meerk40t/grbl/gui/tcpcontroller.py:71 meerk40t/lihuiyu/gui/lhydrivergui.py:242
