--- a/locale/tips.txt
+++ b/locale/tips.txt
@@ -1,18 +1,19 @@
-# This file contains tips to be displayed at program start. Every entry has 3 lines:
-#   version=x.x.x (optional) Minimum version to apply, you can just omit that line to allow it for any version
+# This file contains tips to be displayed at program start. Every entry has up to 3 lines:
 #   tip=xxxx Tip to be displayed
-#   cmd=xxxx Command to execute for the try it out button
-# [tip]
-# version=0.9.3
+#   version=x.x.x (optional) Minimum version to apply, you can just omit that line to allow it for any version
+#   cmd=xxxx Command to execute for the 'Try it out' button
+# NB: Every tip= will reset cmd and version, so please use the sequence tip, cmd, version
+#
+# Example:
 # tip=Did you know, these tips can be maintained and extended online.\nWow, that's great.
 # cmd=
-# [tip]
-# version=1.0
+# version=0.9.3
+#
 # tip=That won't be visible for a while
+# version=1.0
 
-[tip]
 tip=MeerK40t can create a so called outline around an element.\nJust select the element, right click on top of it to get the context menu and choose from the "Outline elements" menu...
 cmd=rect 2cm 2cm 4cm 4cm fill black outline 2mm --steps 4 --outer stroke red
-[tip]
-tip=MeerK40t has an extensive command set features that allows a lot of scriptable actions.\nJust open the console window and type help
+
+tip=MeerK40t has an extensive set of commands that allow a lot of scriptable actions.\nJust open the console window and type help
 cmd=pane show console\nhelp
