--- a/locale/tips.txt
+++ b/locale/tips.txt
@@ -46,10 +46,10 @@ img=https://github.com/meerk40t/meerk40t/assets/2670784/3b01d8c8-5239-4696-8967-
 cmd=https://github.com/meerk40t/meerk40t/wiki/Online-Help:-GUI#Panels
 
 tip=Right click on the top operations node - the top node of operations has a special context menu, that does allow to access/set generic properties of operations
-img=https://private-user-images.githubusercontent.com/2670784/285616467-75cf67db-d329-4fcc-9a5a-e9635d9aa4e1.png
+img=https://user-images.githubusercontent.com/2670784/285616467-75cf67db-d329-4fcc-9a5a-e9635d9aa4e1.png
 cmd=https://github.com/meerk40t/meerk40t/wiki/Online-Help%3A-TREE#Operations
 
-tip=MeerK40t has regmarks, a specical category of elements, that will not be burned but will act as kind of visual guideline for object placement.
+tip=MeerK40t has regmarks, a special category of elements, that will not be burned but will act as kind of visual guideline for object placement.
 You can move elements in out of the regmark zone by dragging them into or out tof the regmark area in the tree.
 Elements in the regmark area are acting as a background, you can no longer directly interact with them on the Scene.
 cmd=https://github.com/meerk40t/meerk40t/wiki/Online-Help%3A-TREE#Regmarks
