--- a/locale/it/LC_MESSAGES/meerk40t.po
+++ b/locale/it/LC_MESSAGES/meerk40t.po
@@ -2156,7 +2156,7 @@ msgid "return paths around image"
 msgstr "restituisci percorsi attorno all'immagine"
 
 #: meerk40t/extra/updater.py:21
-msgid "A new {type} release is available:"
+msgid "A new {type} release is available ({system}):"
 msgstr "È disponibile una nuova versione di {type}:"
 
 msgid ""
@@ -2167,7 +2167,7 @@ msgstr ""
 "URL: {url}"
 
 #: meerk40t/extra/updater.py:26
-msgid "You seem to have the latest version."
+msgid "You seem to have the latest {system} version."
 msgstr "Sembra che tu abbia l'ultima versione."
 
 msgid ""
