--- a/locale/nl/LC_MESSAGES/meerk40t.po
+++ b/locale/nl/LC_MESSAGES/meerk40t.po
@@ -2104,7 +2104,7 @@ msgid "return paths around image"
 msgstr "paden rond afbeelding terug"
 
 #: meerk40t/extra/updater.py:21
-msgid  "A new {type} release is available:"
+msgid  "A new {type} release is available ({system}):"
 msgstr ""
 
 msgid ""
@@ -2113,7 +2113,7 @@ msgid ""
 msgstr ""
 
 #: meerk40t/extra/updater.py:26
-msgid "You seem to have the latest version."
+msgid "You seem to have the latest {system} version."
 msgstr ""
 
 msgid ""
