--- a/locale/pt_PT/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_PT/LC_MESSAGES/meerk40t.po
@@ -2110,7 +2110,7 @@ msgid "return paths around image"
 msgstr "caminhos de retorno em torno da imagem"
 
 #: meerk40t/extra/updater.py:21
-msgid  "A new {type} release is available:"
+msgid  "A new {type} release is available ({system}):"
 msgstr ""
 
 msgid ""
@@ -2119,7 +2119,7 @@ msgid ""
 msgstr ""
 
 #: meerk40t/extra/updater.py:26
-msgid "You seem to have the latest version."
+msgid "You seem to have the latest {system} version."
 msgstr ""
 
 msgid ""
